fix: dont allow buttons to spill over 1 line

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
     width:100%;
     background-color: #222;
     color: white;
-    padding: 10px;
+    padding: 5px;
     height: 30px;
 }
 
@@ -25,7 +25,7 @@ body {
 }
 
 #buttonContainer {
-    width: 233px;
+    width: max-content;
     margin: 0 auto;
 }
 
@@ -78,4 +78,10 @@ iframe {
 
 .hidden {
     display: none;
+}
+
+@media (max-width: 824px) {
+    #logo {
+        display: none;
+    }
 }
